chore: set compiler release to 21